tests/errors/LexerTests.wys
constant char x = '\c'
constant char y = '\r'
